@@ -10,12 +10,13 @@ Version 2.2.0
    - Removed not needed include files from "src/gnubiff.cc"
    - Added files from libegg for later systray support
    - Updated TODO
-   - Cleanup of Applet code
+   - Cleanup of applet code
    - Bugfix: gnome version of gnubiff can now be installed to any directory
    - Added Jakub Raczkowski to contributors
    - Workaround: Added a parameter to the create function to work around the
         problem of setting an incorrect callback data pointer for the gtk
         applet
+   - Bugfix: Text in gtk applet now always fits into the fixed container
 
 Version 2.1.6
  * Robert Sowada
